i made the video element fir in the screen better by changing the height but couldnt figure out how to keep its aspect ratio with the width as it changed also because of the height i also fixed the faqs zoom in as it was too big and also the home pages about cards as it had the same issue

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -104,6 +104,7 @@ main {
   /* Added flex shorthand to take up any surplus space to push footer down */
   flex: 1 0 auto;
   padding: 0;
+  overflow: hidden;
 }
 
 /* Main content */
@@ -111,6 +112,7 @@ main {
   background-color: #454343;
   /* Added flex shorthand to take up any surplus space to push footer down */
   flex: 1 0 auto;
+  overflow: hidden;
 }
 
 /* Main content */
@@ -263,7 +265,7 @@ main {
 #faqs {
   border: 1.6px solid #fff;
   border-radius: 10px;
-  padding: 0 0.5rem;
+  padding: 0 0.2rem;
   margin: 10px;
 }
 
@@ -327,8 +329,8 @@ select, textarea{
 }
 
 #video video {
-  width: 90%;
-  height: auto;
+  width: 95%;
+  height: 80vh;
   margin: 20px 0;
   box-shadow: 1px 1px 50px #7c7878;
 }
@@ -646,6 +648,7 @@ footer {
   #section-whatweoffer {
     font-size: 2.7rem;
     letter-spacing: 0.5px;
+    margin-top: 50px;
   }
 
   #section-offer {
@@ -760,17 +763,16 @@ footer {
   }
 
   #section-about:hover {
-    transform: scale(1.05);
-    box-shadow: 0 -5px 20px 10px rgb(197, 193, 193);
+    transform: scale(1.02);
+    box-shadow: 0 -5px 15px 10px rgb(197, 193, 193);
   }
 
   #navmenu a:hover {
-    border: 2px groove #7c7878;
+    border: 2px outset #7c7878;
     border-radius: 15px;
-    padding: 4px;
+    padding: 3px;
     background-color: #7c7878;
     color: #fff;
-    box-shadow: 5px 5px 5px 1px #fff;
   }
 
   #section-offer:hover {
@@ -827,7 +829,7 @@ footer {
     box-shadow: 10px 5px 20px 15px #7c7878;
     background-color: #7c7878;
     color: #fff;
-    transform: scale(1.02);
+    transform: scale(1.0080);
   }
 
   #contact-form button:hover {
@@ -953,7 +955,6 @@ footer {
     justify-content: center;
     align-items: center;
     letter-spacing: 0.5px;
-    margin: 12px;
   }
 
   #section-offer {
@@ -963,7 +964,7 @@ footer {
     font-style: italic;
     padding: 1rem;
     color: #ffffff;
-    margin: 15px;
+    margin: 12px;
   }
 
   #section-offer img {
@@ -1090,6 +1091,10 @@ footer {
     font-size: 35px;
     padding: 5px 20px;
     margin: 100px 50px;
+  }
+
+  #section-whatweoffer {
+    margin: 20px;
   }
 
   #video {
